// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`converts from 1`] = `
"import style9 from 'style9';
\\"clbvhnp\\";"
`;

exports[`converts from 2`] = `"@keyframes clbvhnp{0%{color:blue}}"`;

exports[`converts to 1`] = `
"import style9 from 'style9';
\\"c1yehff3\\";"
`;

exports[`converts to 2`] = `"@keyframes c1yehff3{100%{color:blue}}"`;

exports[`supports keyframes 1`] = `
"import style9 from 'style9';
\\"c5c3aul\\";"
`;

exports[`supports keyframes 2`] = `"@keyframes c5c3aul{0%{color:blue}100%}}"`;

exports[`supports settings animationName directly 1`] = `
"import style9 from 'style9';
const styles = {
  default: {
    animationName: \\"csqo9ij\\"
  }
};
styles.default;"
`;

exports[`supports settings animationName directly 2`] = `"@keyframes c1px3r7c{0%{opacity:0}}.csqo9ij{animation-name:c1px3r7c}"`;
